regression_test_report_20250615_235141.txt
å›å½’æµ‹è¯•æŠ¥å‘Š - 2025-06-15 23:51:41
============================================================

Shellé…ç½®æµ‹è¯•: PASS

Zshè¿æ¥æµ‹è¯•: PASS

é…ç½®æ–‡ä»¶è¯­æ³•æ£€æŸ¥: FAIL
  é”™è¯¯: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 123
    server_name = self.smart_input(f"ğŸ·ï¸ {server_type}åç§°", 
    ^
IndentationError: expected an indented block


MCPæœåŠ¡å™¨è¯­æ³•æ£€æŸ¥: FAIL
  é”™è¯¯: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/python/mcp_server.py", line 21, in <module>
    from enhanced_config_manager import EnhancedConfigManager
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 123
    server_name = self.smart_input(f"ğŸ·ï¸ {server_type}åç§°", 
    ^
IndentationError: expected an indented block


